fix dark mode so it doesnt suck.

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -7,8 +7,9 @@
  * Colors
  * -------------------------------------------------------------------------- */
 
-/* Generated by gpt-4 */
-.brand {
+
+:root {
+    /* Generated by gpt-4 */
     --brand-100: #f1ebf6;
     --brand-200: #d8cbe4;
     --brand-300: #bfa8d1;
@@ -18,25 +19,30 @@
     --brand-700: #2a223a;
     --brand-800: #211d33;
     --brand-900: #19182c;
-}
+    --brand-950: #141327;
+    --brand-1000: #0c0b18;
 
-:root {
-    --vp-c-brand: #8e63ac;
-    --vp-c-brand-light: #a685be;
-    --vp-c-brand-lighter: #bfa8d1;
-    --vp-c-brand-lightest: #d8cbe4;
-    --vp-c-brand-dark: #322641;
-    --vp-c-brand-darker: #2a223a;
+    --vp-c-brand: var(--brand-500);
+    --vp-c-brand-light: var(--brand-400);
+    --vp-c-brand-lighter: var(--brand-300);
+    --vp-c-brand-lightest: var(--brand-200);
+    --vp-c-brand-dark: var(--brand-600);
+    --vp-c-brand-darker: var(--brand-700);
     --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
     --vp-sidebar-bg-color: #f1ebf6;
+    --vp-code-block-bg: var(--brand-800);
 }
 
 .curtain {
-    display: none;
 }
 
 .dark {
-    --vp-sidebar-bg-color: var(--vp-c-brand-dimm);
+    --vp-sidebar-bg-color: var(--brand-800);
+    --vp-c-bg: var(--brand-900);
+    --vp-nav-bg-color: var(--brand-900);
+    --vp-code-block-bg: var(--brand-1000);
+    --vp-c-bg-soft: var(--brand-950);
+    --vp-input-switch-bg-color: var(--brand-950);
 }
 
 /**
